subsevents required fields added + typo fix

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -1002,6 +1002,13 @@ productToDelete:
 subscriptionevents:
   type: object
   discriminator: type
+  required:
+    - subscriptionId
+    - productId
+    - userId
+    - timestamp
+    - sequenceNumber
+    - type
   properties:
     subscriptionId:
       allOf:
