--- a/paths.yaml
+++ b/paths.yaml
@@ -788,7 +788,7 @@
       - Вебхуки-уведомления
     summary: 'Отправить чек (V2)'
     description: |
-      После оплаты отправляет чек в сторонний сервис. Тело запроса всегда содержит один чек.
+      После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - $ref: ./definitions.yaml#/receipt
@@ -860,7 +860,7 @@
 
         Если ваше приложение распространяется за разовые платежи, а не по подписке, Облако Эвотор передаёт только следующие события:
           * `SubscriptionCreated` – новая подписка. Сообщает о том, что пользователь установил приложение в Личном кабинете. Приходит в начале пробного периода или перед сообщением об успешной оплате, если пробного периода нет.
-          * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате. SubscriptionCreated, если пробного периода нет.
+          * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате. Приходит после окончания пробного периода или после SubscriptionCreated, если пробного периода нет.
           * `SubscriptionTerminated` – Подписка завершена. Приходит если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
     parameters:
       - $ref: './parameters.yaml#/clientAuth'
