post products schema fields update

--- a/paths.yaml
+++ b/paths.yaml
@@ -196,6 +196,8 @@
    description: |
      Загружает информацию об одном или нескольких товарах в определённый магазин (`{storeUuid}`) пользователя платформы.
 
+     При обновлении товара необходимо передавать полный набор полей описания товара. Облако удаляет старые и записывает новые поля.
+
      > С 1.11.2017 Облако перестанет обрабатывать запросы содержащие некорректную схему товаров. Вы по-прежнему сможете получить из Облака ранее созданные товары с некорректной схемой.
    parameters:
      - $ref: ./parameters.yaml#/auth
