--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -38,7 +38,7 @@ x-servers:
   - url: //
     description: 'Веб-адрес запроса:'
 schemes:
-    - http
+    - https
 paths:
   $ref: ./paths.yaml
 parameters:
