--- a/definitions.yaml
+++ b/definitions.yaml
@@ -233,7 +233,7 @@ product:
           * `NORMAL` – обычный;
           * `ALCOHOL_MARKED` – маркированный алкоголь;
           * `ALCOHOL_NOT_MARKED` – немаркированный алкоголь;
-          * `SERVICE` – услуга.
+          * `SERVICE` – услуга (доступен на терминалах начиная с прошивки 3.0).
 
         > **Поле передаётся только если `group = false`.**
 
