message delivery mechanics clarification

--- a/info.yaml
+++ b/info.yaml
@@ -41,6 +41,8 @@ description: |
 
    Максимальный объём данных в запросе к Облаку Эвотор не может превышть 10 МБайт.
 
+   Если сторонний сервис в течение 10 секунд не ответил `200 ОК`, Облако отправляет уведомление повторно.
+
    Ко всем ответам 200 OK от Облака Эвотор будут добавлены следующие заголовки:
 
      * `X-RateLimit-Limit` – Максимальное количество запросов, которые вы можете сделать в текущем временном интервале.
