--- a/paths.yaml
+++ b/paths.yaml
@@ -288,6 +288,8 @@
    summary: 'Создать товары'
    description: |
      Загружает в сторонний сервис массив новых товаров, созданных на терминале.
+
+     Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
    parameters:
      - $ref: ./parameters.yaml#/clientAuth
      - $ref: ./parameters.yaml#/Content-Type
@@ -491,6 +493,8 @@
    summary: 'Передать документы'
    description: |
      Передаёт в сторонний сервис массив документов с транзакциями.
+
+     Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
    parameters:
      - $ref: ./parameters.yaml#/clientAuth
      - $ref: ./parameters.yaml#/storeUuid
@@ -720,6 +724,8 @@
     summary: 'Создать смарт-терминал'
     description: |
       Создать / отредактировать один или несколько смарт-терминалов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
+
+      Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - $ref: ./parameters.yaml#/Content-Type
@@ -753,6 +759,8 @@
     summary: 'Создать сотрудника'
     description: |
       Создать / отредактировать одного или нескольких сотрудников в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
+
+      Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - $ref: ./parameters.yaml#/Content-Type
@@ -785,7 +793,9 @@
       - Вебхуки-уведомления
     summary: 'Создать магазин'
     description: >-
-      Создать / отредактировать однин или несколько магазинов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является     мастер-системой по данной сущности.
+      Создать / отредактировать однин или несколько магазинов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
+
+      Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - $ref: ./parameters.yaml#/Content-Type
@@ -851,6 +861,8 @@
     summary: 'Отправить чек (V2)'
     description: |
       После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
+
+      Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - $ref: ./definitions.yaml#/receipt
