evotor OFD api draft

--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -25,6 +25,10 @@ tags:
     description:
       События, на которые сторонний сервис может подписаться. Облако Эвотор считает, что сообщение доставлено, если сторонний сервиси ответил 200 ОК.
 
+#  - name: Данные ОФД
+#    description:
+#      Данные ОФД.
+
 #  - name: Не рекомендуется
 #    description:
 #      Использование метода не рекомендуется, так как метод устарел.
